log
Sun Apr 10 19:07:52 UTC 2022: 
 tests:  0|6
total_score: 0/70
70b155c
Sun Apr 10 20:21:47 UTC 2022: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:3: error: unknown type name ‘Hashmap’; did you mean ‘HashMap’?
   Hashmap* aux = (Hashmap*)malloc(capacity * sizeof(Hashmap));
   ^~~~~~~
   HashMap
hashmap.c:55:19: error: ‘Hashmap’ undeclared (first use in this function); did you mean ‘HashMap’?
   Hashmap* aux = (Hashmap*)malloc(capacity * sizeof(Hashmap));
                   ^~~~~~~
                   HashMap
hashmap.c:55:19: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:55:27: error: expected expression before ‘)’ token
   Hashmap* aux = (Hashmap*)malloc(capacity * sizeof(Hashmap));
                           ^
hashmap.c:56:6: error: request for member ‘buckets’ in something not a structure or union
   aux->buckets = (Pair*)calloc(capacity, sizeof(Hashmap*));
      ^~
hashmap.c:56:57: error: expected expression before ‘)’ token
   aux->buckets = (Pair*)calloc(capacity, sizeof(Hashmap*));
                                                         ^
hashmap.c:59:6: error: request for member ‘current’ in something not a structure or union
   aux->current = -1;
      ^~
hashmap.c:61:10: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
   return aux;
          ^~~
cc1: all warnings being treated as errors
Compilation failed
ba9c0d1
Sun Apr 10 20:23:41 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
730be95
Sun Apr 10 20:24:19 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
e0d087a
Sun Apr 10 20:32:22 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
b2762bb
Sun Apr 10 20:34:36 UTC 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
cde9762
Sun Apr 10 20:35:15 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0b3b42d
Sun Apr 10 20:35:49 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7457c1d
Sun Apr 10 20:38:22 UTC 2022: 
 hashmap.c | 15 +++++----------
 1 file changed, 5 insertions(+), 10 deletions(-)
 tests:  1|5
total_score: 10/70
2e88e59
Sun Apr 10 21:12:41 UTC 2022: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:18: error: passing argument 1 of ‘hash’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   int pos = hash(map, key);
                  ^~~
hashmap.c:26:6: note: expected ‘char *’ but argument is of type ‘HashMap * {aka struct HashMap *}’
 long hash( char * key, long capacity) {
      ^~~~
hashmap.c:43:23: error: passing argument 2 of ‘hash’ makes integer from pointer without a cast [-Werror=int-conversion]
   int pos = hash(map, key);
                       ^~~
hashmap.c:26:6: note: expected ‘long int’ but argument is of type ‘char *’
 long hash( char * key, long capacity) {
      ^~~~
hashmap.c:43:7: error: unused variable ‘pos’ [-Werror=unused-variable]
   int pos = hash(map, key);
       ^~~
cc1: all warnings being treated as errors
Compilation failed
3bee40d
